# mitpuzzles.com

./: .editorconfig  .env.example  .gitignore  Backend.dockerfile  Dockerfile  Frontend.dockerfile  Makefile  README.md  package-lock.json
backend/: .env.example  .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/accounts/: adapter.py
backend/accounts/migrations/: 0001_initial.py
backend/alembic/: env.py
backend/alembic/versions/: 1756614593_e75100b1355d_add_device_tables.py  1756614620_41acfbeef2c1_create_account_related_tables.py  1756881250_75f9fd5a89d1_create_feedback_table.py  1756888737_0474e76e4d4e_create_puzzle_table.py  1757218471_6239e0f9e8df_create_freeplay_attempt_table.py  1757829623_4b92c6b85e47_add_experiment_run__prolific_data.py  1759985927_7ac06957b098_add_session_activity_table.py  1761736336_7af9bd68351f_add_puzzle_priority_and_puzzle_shown_.py  1763377905_b14b15176069_add_user_profile_table.py  1763407815_3911cae570eb_add_push_subscription_table.py  1765586664_9aa6497bcb10_add_background_job_tables.py  (+7 more)
backend/app/: cache.py  config.py  dependencies.py  errors.py  main.py  tasks.py  utils.py
backend/app/commands/: __init__.py  (+1 more)
backend/cli/: activity.py  main.py  metrics.py  normalizer.py  puzzle_importer.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/core/: admin.py  config.py  fields.py  middleware.py  models.py  serializers.py  utils.py  views.py
backend/experiments/: models.py  serializers.py  urls.py  views.py
backend/mitlogic/: asgi.py  models.py  serializers.py  urls.py  views.py  wsgi.py
backend/protocol/: .gitignore
backend/puzzles/: abstract.py  admin.py  consumers.py  converters.py  encoder.py  middleware.py  models.py  monitor.py  serializers.py  urls.py  views.py
backend/requirements/: base.txt  dev.txt  tracking.txt
backend/scripts/: export_openapi.py
backend/templates/: 503.html
backend/tracking/: admin.py  middleware.py  models.py  views.py
backend/utils/: auth.py
(+988 files in other folders)
